# pipethis

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
src/: __init__.py  _base.py  _inputs.py  _lineinfo.py  _output.py  _pipeline.py  _streamitem.py  _transform.py
src/pipethis/: __init__.py  _base.py  _file_handler.py  _image_transform.py  _input_from_file.py  _input_from_folder.py  _input_from_glob.py  _input_from_string.py  _input_from_strings.py  _inputs.py  _logging.py  _output.py  _output_to_file.py  _output_to_json.py  _output_to_stdout.py  _output_to_string.py  _pipeline.py  _streamitem.py  _transform.py
src/pipethis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_file_handler.py  test_from_file.py  test_from_file_hy.py  test_from_folder.py  test_from_glob.py  test_from_string.py  test_from_string_hy.py  test_from_strings.py  test_image_xform.py  test_imagestream.py  test_inputs.py  test_lineinfo.py  test_logging.py  test_output.py  test_pipeline.py  test_strings.py  test_to_json.py  test_transform.py
