[project]
name = "textline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies=[
# Specify development dependencies like pylint and coverage
"pylint>=3.3.7",
"coverage>=7.3.0"
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod"  # Exclude all lines with the @abstractmethod decorator
]
