[project]
name = "pipethis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "hypothesis>=6.136.0",
    "pillow>=11.3.0",
    "tox>=4.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]


# Pylint setup, gets rid of pylintrc
[tool.pylint.'main']
load-plugins = []

[tool.pylint.messages-control]
disable = []

[tool.pylint.design]
min-public-methods = 0
max-args = 6
max-positional-arguments = 6
max-attributes = 8
